исправлен header и main-nav

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,20 +1,39 @@
-.promo__header {
+.promo {
+  position: relative;
+  min-height: 450px;
+  padding-top: 30px;
+  @include wrapper;
+
+  @media (min-width: $tablet-width) {
+    min-height: 844px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    height: 550px;
+  }
+}
+
+.promo__text-wrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding: 0 20px;
-  padding-top: 30px;
-  padding-bottom: 167px;
+  @include wrapper;
 
-  background-color: #64a83b;
-  background-image: url("../img/index-background-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  min-height: 450px;
+
+  @media (min-width: $tablet-width) {
+    align-items: flex-start;
+
+    min-height: 275px;
+    margin: 0 auto;
+    padding-left: 90px;
+  }
 }
 
-.promo__header-title {
+.promo__title {
   margin: 0;
   margin-bottom: 24px;
 
@@ -23,9 +42,17 @@
   line-height: 1;
   color: #ffffff;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 35px;
+
+    font-size: 60px;
+    color: $palette-title;
+    text-align: left;
+  }
 }
 
-.promo__header-subtitle {
+.promo__subtitle {
   margin: 0;
 
   @include font-primary-normal;
@@ -34,26 +61,89 @@
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    color: $palette-title;
+    text-align: left;
+  }
+}
+
+.promo__image-wrapper {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 1000px;
+  height: 306px;
+  margin-left: -500px;
+
+  background-color: #64a83b;
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+
+  z-index: -1;
+
+  @media (min-width: $tablet-width) {
+    left: 40px;
+    height: auto;
+    width: auto;
+    margin-top: 232px;
+    padding: 0 50px;
+    background: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: -150px;
+    left: 760px;
+    height: 700px;
+    width: 4000px;
+    margin: 0;
+    padding: 0 50px;
+    background-color: #64a83b;
+    background-image: url("../img/index-background-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: left bottom;
+  }
 }
 
 .promo__image {
+  display: block;
   width: 280px;
   height: 270px;
   margin: 0 auto;
-  margin-top: -138px;
-  margin-bottom: 3px;
+  margin-top: 166px;
 
-  img {
-    width: 280px;
-    height: 270px;
+  @media (min-width: $tablet-width) {
+    width: 709px;
+    height: 609px;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 552px;
+    height: 499px;
+    margin-left: -200px;
+    margin-top: 140px;
   }
 }
 
 .promo__btn {
+  position: absolute;
+  bottom: 0;
   display: block;
-  width: 280px;
+  width: calc(100% - 40px);
   margin: 0 auto;
+  padding: 16px 26px;
 
   font-size: 14px;
   line-height: 18px;
+
+  @media (min-width: $tablet-width) {
+    width: auto;
+    margin: 0;
+    font-size: 20px;
+  }
 }
