--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -4,23 +4,54 @@
 
 .main-nav__list {
   @include list-none;
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: flex-start;
+  }
 }
 
 .main-nav__item {
-  padding: 22px;
+  padding: 22px 0;
 
   @include font-primary-normal;
+  border-bottom: 1px solid $palette-border-lighten;
   font-size: 20px;
-  line-height: 1;
+  line-height: 22px;
   text-align: center;
   text-transform: uppercase;
-
-  border-bottom: 1px solid $palette-border-lighten;
-
   a {
     display: block;
     text-decoration: none;
     color: $palette-title;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-right: 36px;
+    border-bottom: none;
+    font-size: 18px;
+    line-height: 20px;
+    &:last-child {
+      margin-right: 0;
+    }
+    &--active {
+      a {
+        padding-bottom: 12px;
+        border-bottom: 2px solid $palette-primary;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 22px;
+    a {
+      color: $palette-inverse;
+    }
+    &--active {
+      a {
+        border-bottom: 2px solid $palette-inverse;
+      }
+    }
   }
 }
 
@@ -28,14 +59,21 @@
   position: absolute;
   top: -44px;
   right: 23px;
+
   width: 18px;
   height: 18px;
+
   background-color: transparent;
   background-image: url("../img/icon-close.svg");
   background-repeat: no-repeat;
   background-size: 18px 18px;
   background-position: center;
+
   border: none;
   box-shadow: none;
   cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
