--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,23 +1,57 @@
-.page-header {
+.page-header__wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+
+    margin: 0 auto;
+    padding: 0 50px;
+  }
+  @media (min-width: $desktop-width) {
+    max-width: 1440px;
+    padding: 0 110px;
+  }
+}
+
+.page-header__logo {
+  padding: 24px 0;
+  border-bottom: 1px solid $palette-border-lighten;
+
+  @media (min-width: $tablet-width) {
+    margin-right: auto;
+    border-bottom: none;
+  }
 }
 
 .page-header__logo-link {
   position: relative;
+
   display: block;
 
   color: $palette-title;
   text-decoration: none;
 
-  border-bottom: 1px solid $palette-border-lighten;
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .page-header__logo-icon {
   position: absolute;
-  top: 11px;
+  top: -10px;
   left: 20px;
 
+  display: block;
   width: 33px;
   height: 38px;
+
+  @media (min-width: $tablet-width) {
+    position: static;
+
+    width: 33px;
+    height: 38px;
+    margin-right: 20px;
+  }
 }
 
 .page-header__logo-title {
@@ -25,5 +59,7 @@
   width: 101px;
   height: 18px;
   margin: 0 auto;
-  padding: 24px;
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 }
