--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Oswald";
+  font-family: Oswald;
   font-weight: 400;
   font-style: normal;
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
