--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,8 @@ $palette-primary: #68b738;
 $palette-primary-hover: #5eaa2f;
 $palette-secondary: #fdc305;
 
+$palette-inverse: #ffffff;
+
 $palette-title: #111111;
 $palette-paragraph: #444444;
 
