--- a/source/sass/blocks/major-goods.scss
+++ b/source/sass/blocks/major-goods.scss
@@ -10,7 +10,7 @@
   @include wrapper;
   margin-bottom: 38px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 36px;
   line-height: 1;
   color: $palette-title;
