--- a/source/sass/blocks/additional-goods-card.scss
+++ b/source/sass/blocks/additional-goods-card.scss
@@ -14,7 +14,7 @@
   margin-bottom: 10px;
   padding-right: 10px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -32,7 +32,7 @@
 }
 
 .additional-goods-card__td {
-  @include font-secondary-normal;
+  @include font-secondary;
   font-size: 12px;
   line-height: 16px;
   color: $palette-paragraph;
@@ -68,7 +68,7 @@
   padding: 0 60px;
   padding-top: 120px;
 
-  @include font-secondary-normal;
+  @include font-secondary;
   font-size: 16px;
   line-height: 19px;
   color: #ffffff;
