--- a/source/sass/blocks/additional-goods.scss
+++ b/source/sass/blocks/additional-goods.scss
@@ -14,7 +14,7 @@
 
   margin-bottom: 35px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 24px;
   line-height: 1;
   color: $palette-title;
