--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -2,9 +2,9 @@
   @include inline-block;
   padding: 10px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
