--- a/source/sass/blocks/catalog-card.scss
+++ b/source/sass/blocks/catalog-card.scss
@@ -11,7 +11,7 @@
   padding: 12px 0;
   padding-left: 70px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 24px;
   line-height: 37px;
   color: $palette-title;
@@ -64,7 +64,7 @@
     margin: 0;
     margin-bottom: 20px;
 
-    @include font-secondary-normal;
+    @include font-secondary;
     font-size: 14px;
     line-height: 18px;
     color: $palette-paragraph;
@@ -79,7 +79,7 @@
   @include inline-block;
   padding-top: 22px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 16px;
   line-height: 16px;
   color: $palette-title;
