--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -14,7 +14,7 @@
   margin: 0;
   margin-bottom: 34px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 36px;
   line-height: 1;
   color: $palette-title;
@@ -28,7 +28,7 @@
     margin-bottom: 20px;
     padding-right: 10px;
 
-    @include font-secondary-normal;
+    @include font-secondary;
     font-size: 14px;
     line-height: 18px;
     color: $palette-paragraph;
@@ -43,7 +43,7 @@
   margin: 0;
   margin-bottom: 33px;
 
-  @include font-primary-normal;
+  @include font-primary;
   font-size: 14px;
   line-height: 20px;
   color: $palette-title;
