--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -37,7 +37,7 @@
     display: flex;
     align-items: center;
 
-    @include font-secondary-normal;
+    @include font-secondary;
     font-size: 16px;
     line-height: 16px;
     color: $palette-paragraph;
