--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -1,14 +1,17 @@
 @mixin wrapper {
-  width: 280px;
+  min-width: 280px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   @media (min-width: $tablet-width) {
     width: auto;
-    padding: 0 50px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
   @media (min-width: $desktop-width) {
     max-width: 1440px;
-    padding: 0 110px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 
@@ -23,12 +26,12 @@
   list-style: none;
 }
 
-@mixin font-primary-normal {
+@mixin font-primary {
   font-family: Oswald, Tahoma, sans-serif;
   font-weight: 400;
 }
 
-@mixin font-secondary-normal {
+@mixin font-secondary {
   font-family: Arial, sans-serif;
   font-weight: 400;
 }
