--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,6 +1,5 @@
 .promo {
   min-width: 280px;
-  min-height: 480px;
   @media (min-width: $tablet-width) {
     height: 825px;
   }
@@ -71,7 +70,7 @@
 
 .promo__subtitle {
   margin: 0;
-  margin-bottom: 26px;
+  margin-bottom: 30px;
   @include font-primary;
   font-size: 14px;
   line-height: 14px;
@@ -92,6 +91,7 @@
   width: 280px;
   height: 270px;
   margin: 0 auto;
+  margin-bottom: 2px;
   @media (min-width: $tablet-width) {
     position: absolute;
     top: 250px;
@@ -125,7 +125,8 @@
 }
 
 .promo__btn {
-  min-width: 280px;
+  width: 100%;
+  padding: 13px;
   font-size: 14px;
   @media (min-width: $tablet-width) {
     width: auto;
