--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,8 +9,7 @@
 
 @import "blocks/main-nav.scss";
 @import "blocks/promo.scss";
-@import "blocks/catalog.scss";
-@import "blocks/catalog-card.scss";
+@import "blocks/topic.scss";
 @import "blocks/features.scss";
 @import "blocks/example.scss";
 @import "blocks/range.scss";
