--- a/source/sass/blocks/topic.scss
+++ b/source/sass/blocks/topic.scss
@@ -1,6 +1,5 @@
 .topic {
   margin-top: 22px;
-  margin-bottom: 34px;
   @media (min-width: $desktop-width) {
     margin-top: 80px;
   }
@@ -19,11 +18,15 @@
   padding: 20px;
   padding-top: 40px;
   background-color: $palette-background;
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
     min-height: 370px;
+    margin-bottom: 30px;
     padding-top: 80px;
     padding-bottom: 60px;
     padding-right: 282px;
@@ -32,7 +35,7 @@
 
   @media (min-width: $desktop-width) {
     width: calc(50% - 40px);
-    margin-bottom: 80px;
+    margin-bottom: 0;
     min-height: 0;
     margin-right: 80px;
     padding-top: 80px;
@@ -170,20 +173,22 @@
     margin-bottom: 20px;
   }
 
-  &--narrow {
-    width: calc(100% - 40px);
-  }
-
   @media (min-width: $tablet-width) {
     margin-bottom: 40px;
     border-bottom: none;
     font-size: 16px;
     line-height: 24px;
     color: $palette-paragraph;
+    &--narrow {
+      width: calc(100% - 40px);
+    }
   }
 
   @media (min-width: $desktop-width) {
     margin-bottom: 10px;
+    &--narrow {
+      width: 100%;
+    }
   }
 }
 
