--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,7 @@
 @import "blocks/main-nav.scss";
 @import "blocks/promo.scss";
 @import "blocks/topic.scss";
-@import "blocks/features.scss";
+@import "blocks/advantage.scss";
 @import "blocks/example.scss";
 @import "blocks/range.scss";
 @import "blocks/stats.scss";
