--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,11 +1,18 @@
 .page-header {
   @media (min-width: $desktop-width) {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    z-index: 1;
+    &--index {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: auto;
+      z-index: 1;
+      .main-nav__item {
+        a {
+          color: $palette-inverse;
+        }
+      }
+    }
   }
 }
 
@@ -14,7 +21,7 @@
     display: flex;
     align-items: flex-start;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0 30px;
     padding-top: 30px;
   }
   @media (min-width: $desktop-width) {
