--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,24 +6,20 @@
 
 @import "blocks/btn.scss";
 @import "blocks/page-header.scss";
-
 @import "blocks/main-nav.scss";
 @import "blocks/promo.scss";
-@import "blocks/topic.scss";
+@import "blocks/programs.scss";
 @import "blocks/advantage.scss";
-@import "blocks/example.scss";
+@import "blocks/concept.scss";
 @import "blocks/range.scss";
 @import "blocks/stats.scss";
 @import "blocks/contacts.scss";
-@import "blocks/major-goods.scss";
-@import "blocks/major-goods-card.scss";
-@import "blocks/additional-goods.scss";
-@import "blocks/additional-goods-card.scss";
+@import "blocks/goods.scss";
+@import "blocks/accessories.scss";
 @import "blocks/form.scss";
-@import "blocks/fieldset.scss";
-
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
+@import "blocks/copyright.scss";
 
 
 // @import "blocks/modal-size.scss";
