--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -33,7 +33,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-left: -80px;
   }
 }
@@ -42,15 +42,14 @@
   display: flex;
   align-items: flex-start;
   min-height: 60px;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     position: relative;
     display: block;
     width: 245px;
     min-height: 230px;
-    margin-right: auto;
-    margin-bottom: 60px;
+    margin-bottom: 90px;
     margin-left: 80px;
     &::after {
       content: "";
@@ -62,25 +61,25 @@
       @include font-primary;
       font-size: 280px;
       line-height: 1;
-      color: #f2f2f2;
+      color: $palette-background;
     }
 
-    &--one {
+    &:nth-child(1) {
       &::after {
         content: "1";
       }
     }
-    &--two {
+    &:nth-child(2) {
       &::after {
         content: "2";
       }
     }
-    &--three {
+    &:nth-child(3) {
       &::after {
         content: "3";
       }
     }
-    &--four {
+    &:nth-child(4) {
       &::after {
         content: "4";
       }
