--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,39 +1,75 @@
+.contacts {
+  @media (min-width: $desktop-width) {
+    margin-top: 90px;
+  }
+}
+
 .contacts__wrapper {
   @include wrapper;
+  position: relative;
 
+  @media (min-width: $desktop-width) {
+    position: relative;
+  }
+}
+
+.contacts__content {
   display: flex;
-  align-items: center;
-  margin-bottom: 25px;
+  padding: 30px 0;
+  background-color: $palette-inverse;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 100px;
+    z-index: 1;
+    width: 570px;
+    padding: 65px 75px;
+  }
 }
 
 .contacts__title {
-  width: 140px;
   margin: 0;
-
+  margin-right: auto;
   @include font-primary;
   font-size: 16px;
   line-height: 20px;
   color: $palette-title;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 25px;
+  }
 }
 
-.contacts__address {
-  width: 140px;
-  margin: 0;
-
+.contacts__text {
   @include font-secondary;
   font-size: 14px;
   line-height: 20px;
   color: $palette-paragraph;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    text-align: right;
+  }
+}
+
+.contacts__last-line {
+  margin-top: auto;
 }
 
 .contacts__map {
   width: 100%;
   height: 362px;
-
   iframe {
     width: 100%;
-    height: 362px;
+    height: 100%;
     border: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
   }
 }
