--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,10 +1,42 @@
 .form {
   width: 100%;
+  margin-top: 30px;
   overflow-x: hidden;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+
+  }
 }
 
 .form__wrapper {
-  @include wrapper;
+  min-width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+
+.form__header {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .form__header-title {
@@ -15,6 +47,11 @@
   font-size: 36px;
   line-height: 1;
   color: $palette-title;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 50px;
+    font-size: 60px;
+  }
 }
 
 .form__header-subtitle {
@@ -26,4 +63,309 @@
   line-height: 18px;
   color: $palette-title;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.form__flex-user-programs {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    align-items: flex-start;
+  }
+}
+
+.form__item {
+  margin-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 15px;
+  &--user {
+    border-bottom: 1px solid $palette-border-lighten;
+  }
+  &--programs {
+    border-bottom: 1px solid $palette-border-lighten;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-left: 40px;
+    padding-right: 40px;
+    &--user {
+      border-bottom: none;
+    }
+    &--programs {
+      position: relative;
+      padding-top: 25px;
+      border-bottom: none;
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 4000px;
+        border: 1px solid $palette-border-lighten;
+      }
+    }
+    &--checkbox {
+      .form__list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -60px;
+      }
+      .form__row {
+        flex-basis: calc(50% - 60px);
+        margin-left: 60px;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 0;
+    padding-right: 0;
+    &--user {
+      flex-basis: calc(50% - 40px);
+      margin-right: 80px;
+    }
+    &--programs {
+      flex-basis: calc(50% - 40px);
+      padding-left: 30px;
+      &::after {
+        right: 0;
+        width: auto;
+      }
+    }
+    &--contacts {
+      .form__list {
+        display: flex;
+        align-items: flex-start;
+        margin-left: -80px;
+      }
+      .form__row {
+        flex-basis: calc(50% - 40px);
+        margin-left: 80px;
+      }
+    }
+    &--checkbox {
+      .form__list {
+        margin-left: -80px;
+      }
+      .form__row {
+        flex-basis: calc(25% - 80px);
+        margin-left: 80px;
+      }
+    }
+  }
+}
+
+.form__item-title {
+  position: relative;
+
+  margin: 0;
+  margin-bottom: 35px;
+
+  @include font-primary;
+  font-size: 24px;
+  line-height: 1;
+  color: $palette-title;
+}
+
+.form__list {
+  @include list-none;
+}
+
+.form__row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.form__label-text {
+  display: block;
+  margin-right: 15px;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.form__input-text {
+  width: 100%;
+  padding: 15px;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+  white-space: nowrap;
+
+  border: 1px solid $palette-border-lighten;
+
+  box-sizing: border-box;
+}
+
+.form__label-radio {
+  position: relative;
+  padding: 7px 0;
+  padding-left: 50px;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+  }
+
+  &::before {
+    top: 0;
+    left: 0;
+
+    width: 30px;
+    height: 30px;
+    border: 1px solid $palette-border-lighten;
+    border-radius: 50%;
+  }
+
+  &::after {
+    top: 10px;
+    left: 10px;
+
+    display: none;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: $palette-primary;
+  }
+}
+
+.form__input-radio:checked ~ .fieldset__label-radioinput::after {
+  display: block;
+}
+
+.form__label-contacts {
+  display: block;
+  width: auto;
+  margin-right: 15px;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.form__input-contacts {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid $palette-border-lighten;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+
+  box-sizing: border-box;
+}
+
+.form__message {
+  width: 100%;
+  min-height: 150px;
+  padding: 15px;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+
+  border: 1px solid $palette-border-lighten;
+
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+.form__label-checkbox {
+  position: relative;
+  padding: 7px 0;
+  padding-left: 50px;
+
+  @include font-primary;
+  font-size: 16px;
+  line-height: 18px;
+  color: $palette-title;
+  text-transform: uppercase;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+  }
+
+  &::before {
+    top: 0;
+    left: 0;
+
+    display: block;
+    width: 30px;
+    height: 30px;
+
+    border: 1px solid $palette-border-lighten;
+  }
+
+  &::after {
+    top: 8px;
+    left: 6px;
+
+    display: none;
+    width: 21px;
+    height: 16px;
+
+    background-image: url("../img/icon-tick.svg");
+    background-repeat: no-repeat;
+    background-size: 21px 16px;
+    background-position: center;
+  }
+}
+
+.form__input-checkbox:checked ~ .form__label-checkbox::after {
+  display: block;
+}
+
+.form__footer {
+  padding: 0 20px;
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: baseline;
+    margin-left: -60px;
+    padding: 0;
+  }
+}
+
+.form__btn,
+.form__footnote {
+  @media (min-width: $tablet-width) {
+    flex-basis: calc(50% - 60px);
+    margin-left: 60px;
+  }
 }
